--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="results"></div>
     </div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
